# project

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  INSTALL  Makefile.am  README  bootstrap  confdefs.h  config.h  configure.ac  libtool  meson.build  preferences.h
.github/workflows/: c-cpp.yml
src/: CXX.h  colortext.cpp  colortext.h  cust.h  cust.h.in  file.cpp  includes.h  main.cpp  main.h  system.cpp  system.h
test/: colortext.cpp  system.cpp
